new branch from a different source

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- Pie Graph script-By Balamurugan S http://www.sbmkpm.com/ //-->
 <!-- Script featured/ available at Dynamic Drive code: http://www.dynamicdrive.com //-->
-
+<!-- Comment made by new branch//-->
 </script>
 
 
