updated a working map.js

--- a/index.html
+++ b/index.html
@@ -68,14 +68,15 @@
    
    #data {
    		width: 400px;
-   		height 200px;
+   		height 400px;
    }
    #data_select {
-   		margin-top: 400px;
+   		position: relative;
    		width: 400px;
    		height 50px;
    }
    #data_wrap {
+   		overflow: auto;
    		text-align: left;
    }
    
@@ -83,7 +84,7 @@
 </head>
 
 <body onload="initialize()">
-  <h1>Seattle, WA 98177</h1>
+  <h1>Washington State</h1>
 
   <div id="wrap">
         <div id="title"></div>
